[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/SingleIngredientPanel.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/IngredientIconPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="SingleIngredientPanel" type="MarginContainer"]
margin_right = 65.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 65.0
margin_bottom = 14.0
mouse_filter = 2

[node name="IngredientIconPanel" parent="HBoxContainer" instance=ExtResource( 2 )]

[node name="Marginer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 65.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_top = 2

[node name="IngredientLabel" type="RichTextLabel" parent="HBoxContainer/Marginer"]
margin_top = 2.0
margin_right = 47.0
margin_bottom = 14.0
mouse_filter = 2
custom_colors/default_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/normal_font = SubResource( 1 )
fit_content_height = true
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_SingleIngredientPanel_gui_input"]
